[Backport] 8268293: VectorAPI cast operation on mask and shuffle is broken
Summary: 8268293: VectorAPI cast operation on mask and shuffle is broken

Test Plan: ci jtreg

Reviewed-by: JoshuaZhuwj

Issue: https://github.com/dragonwell-project/dragonwell11/issues/585